--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="main_user_photo">My Photo</string>
     <string name="main_user_name">User Name</string>
     <string name="main_user_career">Android Developer</string>
-    <string name="main_user_address">65009 Kanatna St, 27></string>
+    <string name="main_user_address">65009 Kanatna St, 27</string>
     <string name="main_facebook_button">facebook button</string>
     <string name="main_linkedin_button">linkedin button</string>
     <string name="main_instagram_button">instagram button</string>
