--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">MyApp</string>
+    <string name="app_name">MyApp!</string>
+    <!--  activity_main-->
+    <string name="main_settings">Settings</string>
+    <string name="main_log_out">Log out</string>
+    <string name="main_user_photo">My Photo</string>
+    <string name="main_user_name">User Name</string>
+    <string name="main_user_career">Android Developer</string>
+    <string name="main_user_address">65009 Kanatna St, 27</string>
+    <string name="main_edit_user_profile">Edit profile</string>
+    <string name="main_user_contacts">VIEW MY CONTACTS</string>
+
 </resources>
