--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="e_mail">E-mail</string>
     <string name="password">Password</string>
     <string name="remember_me">Remember me</string>
+    <!--  messages for user   -->
+    <string name="error_validation_email">Incorrect E-Mail address</string>
+    <string name="error_validation_password">Your password must include a minimum of 8 characters.</string>
 </resources>
