--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
     <string name="register_information">Fill out the profile and go to the application!</string>
     <string name="acquainted">Let\'s get acquainted</string>
     <string name="google">Google</string>
-<!--    <string name="text_terms">By clicking Register you agree to our Terms   \n and Conditions</string>-->
     <string name="text_terms">By clicking Register you agree to our Terms and Conditions</string>
     <string name="text_or">or</string>
     <string name="bt_text_register">Register</string>
@@ -24,7 +23,17 @@
     <string name="e_mail">E-mail</string>
     <string name="password">Password</string>
     <string name="remember_me">Remember me</string>
-    <!--  messages for user   -->
-    <string name="error_validation_email">Incorrect E-Mail address</string>
-    <string name="error_validation_password">Your password must include a minimum of 8 characters.</string>
+
+    <string name="error_password_lower_case">Password must include at least 1 lower case letter such as (a-z).</string>
+    <string name="error_password_unpredictable_symbols"><![CDATA[You can use only letters, numbers and special signs as (#?!@$%^&*-).]]></string>
+    <string name="error_password_upper_case">Password must include at least 1 upper case letter such as (A-Z).</string>
+    <string name="error_password_digit">Password must include at least one digit such as (0–9).</string>
+    <string name="error_special_symbol"><![CDATA[Password must include at least one special symbol such as (#?!@$%^&*-).]]></string>
+    <string name="error_password_minimum_characters">Your password must include a minimum of 8 characters.</string>
+    <string name="error_e_mail_address">Incorrect E-Mail address</string>
+    <string name="error_email_empty">Email is required.</string>
+    <string name="error_password_empty">Password is required.</string>
+    <string name="error_invalid_email_or_password">Invalid email or password</string>
+
+
 </resources>
